moved the token in the Authorization header
